@@ -2,6 +2,8 @@
 	- Fix the error for unknown module in module-config is understandable,
 	  and explains it was not compiled in and where to see the list.
 	- In example.conf explain where to put cachedb module in module-config.
+	- In man page and example config explain that most modules have to
+	  be listed at the start of module-config.
 
 20 February 2019: Wouter
 	- Fix pythonmod include and sockaddr_un ifdefs for compile on
